Overflow issues fixed

--- a/villasteenwijk/src/components/Contact/Contact.module.css
+++ b/villasteenwijk/src/components/Contact/Contact.module.css
@@ -1,6 +1,7 @@
 .kamersprijzen {
   /* background-color: red; */
   background-color: black;
+  overflow-x: hidden;
 }
 
 .hero {
