--- a/villasteenwijk/src/components/Home/header/Header.module.css
+++ b/villasteenwijk/src/components/Home/header/Header.module.css
@@ -13,7 +13,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
+  overflow-x: hidden !important;
 }
 
 .bannerImg {
