--- a/villasteenwijk/src/components/Home/omgeving/Omgeving.module.css
+++ b/villasteenwijk/src/components/Home/omgeving/Omgeving.module.css
@@ -10,7 +10,8 @@
     black
   );
   padding: 5rem 0rem;
-  overflow: hidden;
+
+  overflow-x: hidden !important;
 }
 
 .hero {
