--- a/villasteenwijk/src/components/Home/reviews/Reviews.module.css
+++ b/villasteenwijk/src/components/Home/reviews/Reviews.module.css
@@ -2,6 +2,7 @@
 .reviews {
   background-color: black;
   padding-bottom: 10rem;
+  overflow-x: hidden !important;
 }
 
 .hero {
