--- a/villasteenwijk/src/components/Home/stijlvolovernachten/Stijlvol.module.css
+++ b/villasteenwijk/src/components/Home/stijlvolovernachten/Stijlvol.module.css
@@ -8,6 +8,7 @@
     black
   );
   padding-top: 10rem;
+  overflow: hidden;
 }
 
 .hero {
