--- a/villasteenwijk/src/index.css
+++ b/villasteenwijk/src/index.css
@@ -27,7 +27,6 @@ code {
   margin: 0;
   box-sizing: border-box;
   font-family: luxuryFont;
-  overflow-x: hidden !important;
 }
 
 ::-webkit-scrollbar {
